tests/baselines/reference/missingCloseBracketInArray.errors.txt
missingCloseBracketInArray.ts(1,48): error TS1005: ']' expected.


==== missingCloseBracketInArray.ts (1 errors) ====
    var alphas:string[] = alphas = ["1","2","3","4"
                                                   
!!! error TS1005: ']' expected.
!!! related TS1007 missingCloseBracketInArray.ts:1:32: The parser expected to find a ']' to match the '[' token here.